chap4/y.output
State 1 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 110 conflicts: 13 shift/reduce
State 111 conflicts: 12 shift/reduce
State 135 conflicts: 12 shift/reduce
State 137 conflicts: 12 shift/reduce
State 154 conflicts: 12 shift/reduce


Grammar

    0 $accept: program $end

    1 program: exp

    2 lvalue: ID
    3       | lvalue DOT ID
    4       | lvalue LBRACK exp RBRACK

    5 exp: varExp
    6    | nilExp
    7    | intExp
    8    | stringExp
    9    | binaryOpExp
   10    | unaryOpExp
   11    | callExp
   12    | seqExp
   13    | assignExp
   14    | recordCreateExp
   15    | arrayCreateExp
   16    | ifExp
   17    | whileExp
   18    | forExp
   19    | breakExp
   20    | letExp

   21 varExp: lvalue

   22 nilExp: NIL

   23 intExp: INT

   24 stringExp: STRING

   25 callExp: ID LPAREN argList RPAREN

   26 argList: %empty
   27        | exp argList_

   28 argList_: %empty
   29         | COMMA exp argList_

   30 binaryOpExp: exp PLUS exp
   31            | exp MINUS exp
   32            | exp TIMES exp
   33            | exp DIVIDE exp
   34            | exp EQ exp
   35            | exp NEQ exp
   36            | exp LT exp
   37            | exp LE exp
   38            | exp GT exp
   39            | exp GE exp
   40            | exp AND exp
   41            | exp OR exp

   42 unaryOpExp: MINUS exp

   43 recordCreateExp: ID LBRACE efieldList RBRACE

   44 efield: ID EQ exp

   45 efieldList: %empty
   46           | efield efieldList_

   47 efieldList_: %empty
   48            | COMMA efield efieldList_

   49 seqExp: LPAREN seqList RPAREN

   50 seqList: exp
   51        | exp SEMICOLON seqList

   52 assignExp: lvalue ASSIGN exp

   53 ifExp: IF exp THEN exp ELSE exp
   54      | IF exp THEN exp

   55 whileExp: WHILE exp DO exp

   56 forExp: FOR ID ASSIGN exp TO exp DO exp

   57 breakExp: BREAK

   58 letExp: LET decs IN seqList END

   59 arrayCreateExp: ID LBRACK exp RBRACK OF exp

   60 decs: dec
   61     | dec decs

   62 dec: funcdec
   63    | vardec
   64    | tydec

   65 funcdec: funcdecList

   66 funcdecList: funcdec_
   67            | funcdec_ funcdecList

   68 funcdec_: FUNCTION ID LPAREN fieldList RPAREN COLON ID EQ exp
   69         | FUNCTION ID LPAREN fieldList RPAREN EQ exp

   70 vardec: VAR ID ASSIGN exp
   71       | VAR ID COLON ID ASSIGN exp

   72 tydec: nametyList

   73 nametyList: namety
   74           | namety nametyList

   75 namety: TYPE ID EQ ID
   76       | TYPE ID EQ LBRACE fieldList RBRACE
   77       | TYPE ID EQ ARRAY OF ID

   78 field: ID COLON ID

   79 fieldList: %empty
   80          | field fieldList_

   81 fieldList_: %empty
   82           | COMMA field fieldList_


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 2 3 25 43 44 56 59 68 69 70 71 75 76 77 78
STRING (259) 24
INT (260) 23
COMMA (261) 29 48 82
COLON (262) 68 71 78
SEMICOLON (263) 51
LPAREN (264) 25 49 68 69
RPAREN (265) 25 49 68 69
LBRACK (266) 4 59
RBRACK (267) 4 59
LBRACE (268) 43 76
RBRACE (269) 43 76
DOT (270) 3
ASSIGN (271) 52 56 70 71
ARRAY (272) 77
IF (273) 53 54
THEN (274) 53 54
ELSE (275) 53
WHILE (276) 55
FOR (277) 56
TO (278) 56
LET (279) 58
IN (280) 58
END (281) 58
OF (282) 59 77
DO (283) 55 56
BREAK (284) 57
NIL (285) 22
FUNCTION (286) 68 69
VAR (287) 70 71
TYPE (288) 75 76 77
OR (289) 41
AND (290) 40
EQ (291) 34 44 68 69 75 76 77
NEQ (292) 35
LT (293) 36
LE (294) 37
GT (295) 38
GE (296) 39
PLUS (297) 30
MINUS (298) 31 42
TIMES (299) 32
DIVIDE (300) 33
UMINUS (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
lvalue (49)
    on left: 2 3 4, on right: 3 4 21 52
exp (50)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20, on right:
    1 4 27 29 30 31 32 33 34 35 36 37 38 39 40 41 42 44 50 51 52 53
    54 55 56 59 68 69 70 71
varExp (51)
    on left: 21, on right: 5
nilExp (52)
    on left: 22, on right: 6
intExp (53)
    on left: 23, on right: 7
stringExp (54)
    on left: 24, on right: 8
callExp (55)
    on left: 25, on right: 11
argList (56)
    on left: 26 27, on right: 25
argList_ (57)
    on left: 28 29, on right: 27 29
binaryOpExp (58)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41, on right: 9
unaryOpExp (59)
    on left: 42, on right: 10
recordCreateExp (60)
    on left: 43, on right: 14
efield (61)
    on left: 44, on right: 46 48
efieldList (62)
    on left: 45 46, on right: 43
efieldList_ (63)
    on left: 47 48, on right: 46 48
seqExp (64)
    on left: 49, on right: 12
seqList (65)
    on left: 50 51, on right: 49 51 58
assignExp (66)
    on left: 52, on right: 13
ifExp (67)
    on left: 53 54, on right: 16
whileExp (68)
    on left: 55, on right: 17
forExp (69)
    on left: 56, on right: 18
breakExp (70)
    on left: 57, on right: 19
letExp (71)
    on left: 58, on right: 20
arrayCreateExp (72)
    on left: 59, on right: 15
decs (73)
    on left: 60 61, on right: 58 61
dec (74)
    on left: 62 63 64, on right: 60 61
funcdec (75)
    on left: 65, on right: 62
funcdecList (76)
    on left: 66 67, on right: 65 67
funcdec_ (77)
    on left: 68 69, on right: 66 67
vardec (78)
    on left: 70 71, on right: 63
tydec (79)
    on left: 72, on right: 64
nametyList (80)
    on left: 73 74, on right: 72 74
namety (81)
    on left: 75 76 77, on right: 73 74
field (82)
    on left: 78, on right: 80 82
fieldList (83)
    on left: 79 80, on right: 68 69 76
fieldList_ (84)
    on left: 81 82, on right: 80 82


State 0

    0 $accept: . program $end
    1 program: . exp
    2 lvalue: . ID
    3       | . lvalue DOT ID
    4       | . lvalue LBRACK exp RBRACK
    5 exp: . varExp
    6    | . nilExp
    7    | . intExp
    8    | . stringExp
    9    | . binaryOpExp
   10    | . unaryOpExp
   11    | . callExp
   12    | . seqExp
   13    | . assignExp
   14    | . recordCreateExp
   15    | . arrayCreateExp
   16    | . ifExp
   17    | . whileExp
   18    | . forExp
   19    | . breakExp
   20    | . letExp
   21 varExp: . lvalue
   22 nilExp: . NIL
   23 intExp: . INT
   24 stringExp: . STRING
   25 callExp: . ID LPAREN argList RPAREN
   30 binaryOpExp: . exp PLUS exp
   31            | . exp MINUS exp
   32            | . exp TIMES exp
   33            | . exp DIVIDE exp
   34            | . exp EQ exp
   35            | . exp NEQ exp
   36            | . exp LT exp
   37            | . exp LE exp
   38            | . exp GT exp
   39            | . exp GE exp
   40            | . exp AND exp
   41            | . exp OR exp
   42 unaryOpExp: . MINUS exp
   43 recordCreateExp: . ID LBRACE efieldList RBRACE
   49 seqExp: . LPAREN seqList RPAREN
   52 assignExp: . lvalue ASSIGN exp
   53 ifExp: . IF exp THEN exp ELSE exp
   54      | . IF exp THEN exp
   55 whileExp: . WHILE exp DO exp
   56 forExp: . FOR ID ASSIGN exp TO exp DO exp
   57 breakExp: . BREAK
   58 letExp: . LET decs IN seqList END
   59 arrayCreateExp: . ID LBRACK exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    program          go to state 12
    lvalue           go to state 13
    exp              go to state 14
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 1

    2 lvalue: ID .  [$end, COMMA, SEMICOLON, RPAREN, LBRACK, RBRACK, RBRACE, DOT, ASSIGN, THEN, ELSE, TO, IN, END, DO, FUNCTION, VAR, TYPE, OR, AND, EQ, NEQ, LT, LE, GT, GE, PLUS, MINUS, TIMES, DIVIDE]
   25 callExp: ID . LPAREN argList RPAREN
   43 recordCreateExp: ID . LBRACE efieldList RBRACE
   59 arrayCreateExp: ID . LBRACK exp RBRACK OF exp

    LPAREN  shift, and go to state 31
    LBRACK  shift, and go to state 32
    LBRACE  shift, and go to state 33

    LBRACK    [reduce using rule 2 (lvalue)]
    $default  reduce using rule 2 (lvalue)


State 2

   24 stringExp: STRING .

    $default  reduce using rule 24 (stringExp)


State 3

   23 intExp: INT .

    $default  reduce using rule 23 (intExp)


State 4

    2 lvalue: . ID
    3       | . lvalue DOT ID
    4       | . lvalue LBRACK exp RBRACK
    5 exp: . varExp
    6    | . nilExp
    7    | . intExp
    8    | . stringExp
    9    | . binaryOpExp
   10    | . unaryOpExp
   11    | . callExp
   12    | . seqExp
   13    | . assignExp
   14    | . recordCreateExp
   15    | . arrayCreateExp
   16    | . ifExp
   17    | . whileExp
   18    | . forExp
   19    | . breakExp
   20    | . letExp
   21 varExp: . lvalue
   22 nilExp: . NIL
   23 intExp: . INT
   24 stringExp: . STRING
   25 callExp: . ID LPAREN argList RPAREN
   30 binaryOpExp: . exp PLUS exp
   31            | . exp MINUS exp
   32            | . exp TIMES exp
   33            | . exp DIVIDE exp
   34            | . exp EQ exp
   35            | . exp NEQ exp
   36            | . exp LT exp
   37            | . exp LE exp
   38            | . exp GT exp
   39            | . exp GE exp
   40            | . exp AND exp
   41            | . exp OR exp
   42 unaryOpExp: . MINUS exp
   43 recordCreateExp: . ID LBRACE efieldList RBRACE
   49 seqExp: . LPAREN seqList RPAREN
   49       | LPAREN . seqList RPAREN
   50 seqList: . exp
   51        | . exp SEMICOLON seqList
   52 assignExp: . lvalue ASSIGN exp
   53 ifExp: . IF exp THEN exp ELSE exp
   54      | . IF exp THEN exp
   55 whileExp: . WHILE exp DO exp
   56 forExp: . FOR ID ASSIGN exp TO exp DO exp
   57 breakExp: . BREAK
   58 letExp: . LET decs IN seqList END
   59 arrayCreateExp: . ID LBRACK exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 34
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    seqList          go to state 35
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 5

    2 lvalue: . ID
    3       | . lvalue DOT ID
    4       | . lvalue LBRACK exp RBRACK
    5 exp: . varExp
    6    | . nilExp
    7    | . intExp
    8    | . stringExp
    9    | . binaryOpExp
   10    | . unaryOpExp
   11    | . callExp
   12    | . seqExp
   13    | . assignExp
   14    | . recordCreateExp
   15    | . arrayCreateExp
   16    | . ifExp
   17    | . whileExp
   18    | . forExp
   19    | . breakExp
   20    | . letExp
   21 varExp: . lvalue
   22 nilExp: . NIL
   23 intExp: . INT
   24 stringExp: . STRING
   25 callExp: . ID LPAREN argList RPAREN
   30 binaryOpExp: . exp PLUS exp
   31            | . exp MINUS exp
   32            | . exp TIMES exp
   33            | . exp DIVIDE exp
   34            | . exp EQ exp
   35            | . exp NEQ exp
   36            | . exp LT exp
   37            | . exp LE exp
   38            | . exp GT exp
   39            | . exp GE exp
   40            | . exp AND exp
   41            | . exp OR exp
   42 unaryOpExp: . MINUS exp
   43 recordCreateExp: . ID LBRACE efieldList RBRACE
   49 seqExp: . LPAREN seqList RPAREN
   52 assignExp: . lvalue ASSIGN exp
   53 ifExp: . IF exp THEN exp ELSE exp
   53      | IF . exp THEN exp ELSE exp
   54      | . IF exp THEN exp
   54      | IF . exp THEN exp
   55 whileExp: . WHILE exp DO exp
   56 forExp: . FOR ID ASSIGN exp TO exp DO exp
   57 breakExp: . BREAK
   58 letExp: . LET decs IN seqList END
   59 arrayCreateExp: . ID LBRACK exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 36
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 6

    2 lvalue: . ID
    3       | . lvalue DOT ID
    4       | . lvalue LBRACK exp RBRACK
    5 exp: . varExp
    6    | . nilExp
    7    | . intExp
    8    | . stringExp
    9    | . binaryOpExp
   10    | . unaryOpExp
   11    | . callExp
   12    | . seqExp
   13    | . assignExp
   14    | . recordCreateExp
   15    | . arrayCreateExp
   16    | . ifExp
   17    | . whileExp
   18    | . forExp
   19    | . breakExp
   20    | . letExp
   21 varExp: . lvalue
   22 nilExp: . NIL
   23 intExp: . INT
   24 stringExp: . STRING
   25 callExp: . ID LPAREN argList RPAREN
   30 binaryOpExp: . exp PLUS exp
   31            | . exp MINUS exp
   32            | . exp TIMES exp
   33            | . exp DIVIDE exp
   34            | . exp EQ exp
   35            | . exp NEQ exp
   36            | . exp LT exp
   37            | . exp LE exp
   38            | . exp GT exp
   39            | . exp GE exp
   40            | . exp AND exp
   41            | . exp OR exp
   42 unaryOpExp: . MINUS exp
   43 recordCreateExp: . ID LBRACE efieldList RBRACE
   49 seqExp: . LPAREN seqList RPAREN
   52 assignExp: . lvalue ASSIGN exp
   53 ifExp: . IF exp THEN exp ELSE exp
   54      | . IF exp THEN exp
   55 whileExp: . WHILE exp DO exp
   55         | WHILE . exp DO exp
   56 forExp: . FOR ID ASSIGN exp TO exp DO exp
   57 breakExp: . BREAK
   58 letExp: . LET decs IN seqList END
   59 arrayCreateExp: . ID LBRACK exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 37
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 7

   56 forExp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 38


State 8

   58 letExp: LET . decs IN seqList END
   60 decs: . dec
   61     | . dec decs
   62 dec: . funcdec
   63    | . vardec
   64    | . tydec
   65 funcdec: . funcdecList
   66 funcdecList: . funcdec_
   67            | . funcdec_ funcdecList
   68 funcdec_: . FUNCTION ID LPAREN fieldList RPAREN COLON ID EQ exp
   69         | . FUNCTION ID LPAREN fieldList RPAREN EQ exp
   70 vardec: . VAR ID ASSIGN exp
   71       | . VAR ID COLON ID ASSIGN exp
   72 tydec: . nametyList
   73 nametyList: . namety
   74           | . namety nametyList
   75 namety: . TYPE ID EQ ID
   76       | . TYPE ID EQ LBRACE fieldList RBRACE
   77       | . TYPE ID EQ ARRAY OF ID

    FUNCTION  shift, and go to state 39
    VAR       shift, and go to state 40
    TYPE      shift, and go to state 41

    decs         go to state 42
    dec          go to state 43
    funcdec      go to state 44
    funcdecList  go to state 45
    funcdec_     go to state 46
    vardec       go to state 47
    tydec        go to state 48
    nametyList   go to state 49
    namety       go to state 50


State 9

   57 breakExp: BREAK .

    $default  reduce using rule 57 (breakExp)


State 10

   22 nilExp: NIL .

    $default  reduce using rule 22 (nilExp)


State 11

    2 lvalue: . ID
    3       | . lvalue DOT ID
    4       | . lvalue LBRACK exp RBRACK
    5 exp: . varExp
    6    | . nilExp
    7    | . intExp
    8    | . stringExp
    9    | . binaryOpExp
   10    | . unaryOpExp
   11    | . callExp
   12    | . seqExp
   13    | . assignExp
   14    | . recordCreateExp
   15    | . arrayCreateExp
   16    | . ifExp
   17    | . whileExp
   18    | . forExp
   19    | . breakExp
   20    | . letExp
   21 varExp: . lvalue
   22 nilExp: . NIL
   23 intExp: . INT
   24 stringExp: . STRING
   25 callExp: . ID LPAREN argList RPAREN
   30 binaryOpExp: . exp PLUS exp
   31            | . exp MINUS exp
   32            | . exp TIMES exp
   33            | . exp DIVIDE exp
   34            | . exp EQ exp
   35            | . exp NEQ exp
   36            | . exp LT exp
   37            | . exp LE exp
   38            | . exp GT exp
   39            | . exp GE exp
   40            | . exp AND exp
   41            | . exp OR exp
   42 unaryOpExp: . MINUS exp
   42           | MINUS . exp
   43 recordCreateExp: . ID LBRACE efieldList RBRACE
   49 seqExp: . LPAREN seqList RPAREN
   52 assignExp: . lvalue ASSIGN exp
   53 ifExp: . IF exp THEN exp ELSE exp
   54      | . IF exp THEN exp
   55 whileExp: . WHILE exp DO exp
   56 forExp: . FOR ID ASSIGN exp TO exp DO exp
   57 breakExp: . BREAK
   58 letExp: . LET decs IN seqList END
   59 arrayCreateExp: . ID LBRACK exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    FOR     shift, and go to state 7
    LET     shift, and go to state 8
    BREAK   shift, and go to state 9
    NIL     shift, and go to state 10
    MINUS   shift, and go to state 11

    lvalue           go to state 13
    exp              go to state 51
    varExp           go to state 15
    nilExp           go to state 16
    intExp           go to state 17
    stringExp        go to state 18
    callExp          go to state 19
    binaryOpExp      go to state 20
    unaryOpExp       go to state 21
    recordCreateExp  go to state 22
    seqExp           go to state 23
    assignExp        go to state 24
    ifExp            go to state 25
    whileExp         go to state 26
    forExp           go to state 27
    breakExp         go to state 28
    letExp           go to state 29
    arrayCreateExp   go to state 30


State 12

    0 $accept: program . $end

    $end  shift, and go to state 52


State 13

    3 lvalue: lvalue . DOT ID
    4       | lvalue . LBRACK exp RBRACK
   21 varExp: lvalue .  [$end, COMMA, SEMICOLON, RPAREN, RBRACK, RBRACE, THEN, ELSE, TO, IN, END, DO, FUNCTION, VAR, TYPE, OR, AND, EQ, NEQ, LT, LE, GT, GE, PLUS, MINUS, TIMES, DIVIDE]
   52 assignExp: lvalue . ASSIGN exp

    LBRACK  shift, and go to state 53
    DOT     shift, and go to state 54
    ASSIGN  shift, and go to state 55

    $default  reduce using rule 21 (varExp)


State 14

    1 program: exp .  [$end]
   30 binaryOpExp: exp . PLUS exp
   31            | exp . MINUS exp
   32            | exp . TIMES exp
   33            | exp . DIVIDE exp
   34            | exp . EQ exp
   35            | exp . NEQ exp
   36            | exp . LT exp
   37            | exp . LE exp
   38            | exp . GT exp
   39            | exp . GE exp
   40            | exp . AND exp
   41            | exp . OR exp

    OR      shift, and go to state 56
    AND     shift, and go to state 57
    EQ      shift, and go to state 58
    NEQ     shift, and go to state 59
    LT      shift, and go to state 60
    LE      shift, and go to state 61
    GT      shift, and go to state 62
    GE      shift, and go to state 63
    PLUS    shift, and go to state 64
    MINUS   shift, and go to state 65
    TIMES   shift, and go to state 66
    DIVIDE  shift, and go to state 67

    $default  reduce using rule 1 (program)


State 15

    5 exp: varExp .

    $default  reduce using rule 5 (exp)


State 16

    6 exp: nilExp .

    $default  reduce using rule 6 (exp)


State 17

    7 exp: intExp .

    $default  reduce using rule 7 (exp)


State 18

    8 exp: stringExp .

    $default  reduce using rule 8 (exp)


State 19

   11 exp: callExp .

    $default  reduce using rule 11 (exp)


State 20

    9 exp: binaryOpExp .

    $default  reduce using rule 9 (exp)


State 21

   10 exp: unaryOpExp .

    $default  reduce using rule 10 (exp)


State 22

   14 exp: recordCreateExp .

    $default  reduce using rule 14 (exp)


State 23

   12 exp: seqExp .

    $default  reduce using rule 12 (exp)


State 24

   13 exp: assignExp .

    $default  reduce using rule 13 (exp)


State 25

   16 exp: ifExp .

    $default  reduce using rule 16 (exp)


State 26

   17 exp: whileExp .

    $default  reduce using rule 17 (exp)


State 27

   18 exp: forExp .

    $default  reduce using rule 18 (exp)


State 28

   19 exp: breakExp .

    $default  reduce using rule 19 (exp)


State 29

   20 exp: letExp .

    $default  reduce using rule 20 (exp)


State 30

   15 exp: arrayCreateExp .

    $default  reduce using rule 15 (exp)


State 31
